tests/test_files_pa3/SemanticErrors/LocalVarsNotInitB4Use1.ic
class B
{
	void a()
	{
		int b;
		while (1 > 0)
		{
			b = 5;
		}
		b = b + 5;
	}
}

class A
{
	static void main(string[] args) { }
	void a()
	{
		int b;
		func(b);	
	}
	
	void sfunc(int a)
	{
	}
}